# QuantumEigenSolver

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  QuantumEigenSolver.code-workspace  README.md  Untitled-1.ipynb  test_import.py  todo.md
Python/: .flake8  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  Makefile  SUSY.ipynb  Untitled-1.ipynb  __init__.py  chaotic_entropy.ipynb  chaotic_entropy_plots.ipynb  chaotic_test.ipynb  classical.ipynb  entanglement.ipynb  entropy_ent.ipynb  matrices.ipynb  matrices.py  pyproject.toml  python.py  setup.py  test.ipynb
Python/.dev/: README.md
Python/QES/: MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  __init__.py  pyproject.toml  setup.py  tests.ipynb  tox.ini
Python/QES/Algebra/: __init__.py  globals.py  hamil.py  hamil_energy.py  hamil_energy_helper.py  hamil_energy_jax.py  hamil_jit_methods.py  hamil_quadratic.py  hamil_types.py  hilbert.py  symmetries.py
Python/QES/NQS/: __init__.py  nqs.py  nqs_train.py  nqs_utils.py  tdvp.py
Python/QES/Solver/: __init__.py  hilbert.py  solver.py
Python/QES/requirements/: requirements-dev.txt  requirements-docs.txt  requirements-hdf5.txt
Python/classical2/_TesterModel,Ns=10,bc=1/: entropies,spectrum_num=1024.bin.tmp_f3a34c61  entropies,spectrum_num=1024.txt.tmp_f3a3ac0f
Python/classical2/_TesterModel,Ns=12,bc=1/: entropies,spectrum_num=4096.bin.tmp_bab07d20  entropies,spectrum_num=4096.txt.tmp_dc1ecd5a
Python/classical2/_TesterModel,Ns=14,bc=1/: entropies,spectrum_num=16384.bin.tmp_7cece3bf  entropies,spectrum_num=16384.txt.tmp_e7f44851
Python/classical2/_TesterModel,Ns=8,bc=1/: entropies,spectrum_num=256.bin.tmp_d4c7e01a  entropies,spectrum_num=256.txt.tmp_751e577f
Python/common/: __common__.py
Python/final/: plots_L=20_may_be_incorect.rar
Python/plot_data/: su_gap_ratio_hist_L=20,J2=0.1,d1=2.0.npy  su_gap_ratio_hist_L=20,J2=0.2,d1=0.2.npy  su_gap_ratio_hist_L=20,J2=2.0,d1=0.1.npy
Python/plot_data/gap_ratio/: su_gap_ratio_hist_L=20,J2=1.0,d1=1.0.npy
Python/plot_data/size_scale_nu/: su_sizes_pbc_nu=0.25,J2=2.0,d1=0.6.npy  su_sizes_pbc_nu=0.5,J2=2.0,d1=0.6.npy
Python/plot_data/state_dist_chi_im/: su_states_1_chi_hist_L=20,J2=1.0,d1=0.1.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=0.2.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=0.3.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=0.4.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=0.5.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=0.6.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=0.7.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=0.8.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=0.9.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.0.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.1.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.2.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.3.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.4.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.5.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.6.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.7.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.8.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=1.9.npy  su_states_1_chi_hist_L=20,J2=1.0,d1=2.0.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.1.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.2.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.3.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.4.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.5.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.6.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.7.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.8.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=0.9.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.0.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.1.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.2.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.3.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.4.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.5.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.6.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.7.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.8.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=1.9.npy  su_states_1_chi_hist_L=20,J2=2.0,d1=2.0.npy  (+1 more)
Python/projects/2025_um_evolotion/: evolution.py  (+7 more)
Python/requirements/: README.md  requirements-dev.txt  requirements-jax.txt  requirements-ml.txt  requirements.txt
Python/src/: __entro_plot__.py  __helper__.py  __models__.py  __readers__.py
Python/test/: __init__.py  nqs_sampler.py  nqs_solver.py  nqs_train.py  profile_stats.prof  test_mc_sampler.ipynb  test_nqs.ipynb  test_nqs_gs.ipynb  test_nqs_time_evo.ipynb  test_operators.ipynb  test_random.ipynb
(+392 files in other folders)
